@@ -12,6 +12,7 @@ AM_CFLAGS = \
   ${GUILE_INCS} \
   ${GUPPI_CFLAGS} \
   ${GLIB_CFLAGS} \
+  ${GLADE_CFLAGS} \
   ${GNOME_PRINT_CFLAGS} \
   ${GNOME_INCLUDEDIR} \
   ${GDK_PIXBUF_CFLAGS} \
